@@ -3,7 +3,7 @@
     "title": "Space debris",
     "description": "Items you throw overboard become asteroids and damage your platforms.",
 
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Quezler",
     "factorio_version": "2.0",
 
