@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
-Date: ????
+Date: 2025. 06. 19
   Info:
     - Update description
+    - Blacklist asteroid chunks
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025. 05. 12
